# dbt-certified-developer-path

./: .gitignore  README.md  dbt_project.yml  pyproject.toml
models/staging/: sources.yml
models/staging/jaffle_shop/: stg_jaffle_shop.yml  stg_jaffle_shop__customers.sql  stg_jaffle_shop__orders.sql
models/staging/stripe/: stg_stripe__payments.sql  stg_stripe__payments.yml
tests/: assert_positive_value_for_total_amount.sql  schema.yml
